<resources>
    <string name="app_name">Hillside</string>
    <string name="hillside">Hillside</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_account">Already have an account?</string>
    <string name="existing_account">Sign Into Existing Account</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="welcome_hillside">Welcome to Hillside</string>
    <string name="connect_with_us">Connect With Us</string>
    <string name="facebook">Facebook</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home">Home</string>
    <string name="about_us">About Us</string>
    <string name="nursery_schools">Nursery Schools</string>
    <string name="co_curricular">Co-curricular</string>
    <string name="ple_results">P.L.E Results</string>
    <string name="background">Background</string>
    <string name="admissions">Admissions</string>
    <string name="rules_and_regulations">Rules and Regulations</string>
    <string name="fees_structure">Fees Structure</string>
    <string name="our_team">Our Team</string>
    <string name="leadership_team">Leadership Team</string>
    <string name="head_of_departments">Head of Departments</string>
    <string name="school_coordinators">School Coordinators</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facilities">Facilities</string>
    <string name="contact_us">Contact Us</string>
    <string name="gallery">Gallery</string>

    <string name="open">Open nav drawer</string>
    <string name="close">Close nav drawer</string>
    <string name="organization">Organization</string>
    <string name="primary_school">Primary school</string>
</resources>